generated/manifests/prod-axon/matrix-admin/Service-matrix-admin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: matrix-admin
    app.kubernetes.io/name: matrix-admin
    app.kubernetes.io/service: matrix-admin
  name: matrix-admin
  namespace: matrix
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: matrix-admin
    app.kubernetes.io/name: matrix-admin
  type: ClusterIP
