generated/manifests/prod-axon/matrix-admin/SecurityPolicy-matrix-admin-oidc.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: matrix-admin-oidc
  namespace: matrix
spec:
  oidc:
    clientID: synapse-admin
    clientSecret:
      name: synapse-admin-oidc-client-secret
    forwardAccessToken: false
    provider:
      authorizationEndpoint: https://idm.json64.dev/ui/oauth2
      issuer: https://idm.json64.dev/oauth2/openid/synapse-admin
      tokenEndpoint: https://idm.json64.dev/oauth2/token
    scopes:
      - email
      - openid
      - profile
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: matrix-admin
